fix: rework loginpage alignment

--- a/client/src/PageStyle/RegisterPage.css
+++ b/client/src/PageStyle/RegisterPage.css
@@ -1,11 +1,46 @@
+/* .body {
+    background-image: url('../images/login-page-bg.jpg');
+} */
 .register-block{
     float:left;
+    
     width:100%;
-    padding : 50px 0;
+    padding : 300px 0;
 }
 
-.container{background:#D3D3D3; border-radius: 10px; width: 40%; height: 40%;}
-.register-sec{padding: 50px 30px; position:relative;}
-.register-sec h2{margin-bottom:30px; font-weight:800; font-size:30px; color: #0069c0;}
-.register-sec h2:after{content:" "; width:100px; height:5px; background:#6ec6ff; display:block; margin-top:20px; border-radius:3px; margin-left:auto;margin-right:auto}
-.btn-login{background: #0069c0; color:#fff; font-weight:600;}
+.r-container{
+    background:#D3D3D3;
+    border-radius: 10px; 
+    width: 30%; 
+    height: 40%;
+    margin: auto;
+}
+
+.register-sec{
+    padding: 10px 30px; 
+    position:relative;
+}
+
+.register-sec h2{
+    margin-bottom:10px; 
+    font-weight:800; 
+    font-size:30px; 
+    color: #0069c0;
+}
+
+.register-sec h2:after{
+    content:" "; width:100px; 
+    height:5px; 
+    background:#6ec6ff; 
+    display:block; 
+    margin-top:20px; 
+    border-radius:3px; 
+    margin-left:auto;
+    margin-right:auto
+}
+
+.btn-login{
+    background: #0069c0; 
+    color:#fff; 
+    font-weight:600;
+}
